Should be root to clean
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10796 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/tests/openvz/Makefile
+++ b/tests/openvz/Makefile
@@ -111,10 +111,10 @@ cleanvz:
 	[ ! -d $(VZPRIVATEDIR)/$(VEID) ] || $(VZCTL) destroy $(VEID)
 	-rm -f /etc/vz/conf/$(VEID).conf.destroyed
 
-cleancentos:
+cleancentos: beroot
 	make cleanvz VEID=$(VEIDCENTOSTMPL)
 	
-cleandeb:
+cleandeb: beroot
 	make cleanvz VEID=$(VEIDDEBTMPL)
 
 finalizedeb: beroot
