Use libs from lib/vendor for tarball & rpm install
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10805 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/src/etc/gforge-httpd.conf.example
+++ b/src/etc/gforge-httpd.conf.example
@@ -55,5 +55,9 @@
 
 	php_value	include_path ".:/opt/gforge/www/include/:/opt/gforge:/etc/gforge/"
 
+	Alias /scripts/prototype/ /opt/gforge/lib/vendor/prototype/
+	Alias /scripts/scriptaculous/ /opt/gforge/lib/vendor/scriptaculous/
+	Alias /scripts/yui/ /opt/gforge/lib/vendor/yui/build/
+
 	Include "/etc/gforge/httpd.d/*.conf"
 </VirtualHost>
