Make up our mind on fusionforge.conf and migrate from gforge.conf if needed
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10817 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/dsf-helper/handle-mainconffile.config
+++ b/gforge/debian/dsf-helper/handle-mainconffile.config
@@ -8,7 +8,11 @@ create_mainconffile () {
 	mkdir -p $mainconfdir
     fi
     if [ ! -e $mainconffile ] ; then
-        touch $mainconffile
+	if [ -e /etc/gforge/gforge.conf ] ; then
+	    cp -a /etc/gforge/gforge.conf $mainconffile
+	else
+            touch $mainconffile
+	fi
         chmod 600 $mainconffile
     fi
 }
