Remove sudo for vzctl
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10893 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/tests/openvz/Makefile
+++ b/tests/openvz/Makefile
@@ -16,7 +16,7 @@ CENTVERS=5.5
 VZPRIVATEDIR=/var/lib/vz/private
 # You shouldn't change the next line, don't really work
 VZTEMPLATEDIR=/var/lib/vz/template
-VZCTL=sudo /usr/sbin/vzctl
+VZCTL=/usr/sbin/vzctl
 DEBOOTSTRAP=/usr/sbin/debootstrap
 RINSE=extrapackage="$(EXTRACENTOSPACKAGE)" /usr/sbin/rinse
 
