Add some target
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@10926 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/3rd-party/selenium/Makefile
+++ b/3rd-party/selenium/Makefile
@@ -17,3 +17,10 @@ binary/selenium-remote-control-1.0.3.zip: binary
 
 binary:
 	mkdir binary
+
+svnexport:
+	svn export http://selenium.googlecode.com/svn/trunk/remote/server selenium-server
+	#svn export http://selenium.googlecode.com/svn/trunk selenium
+
+getpackage:
+	sudo apt-get install maven-debian-helper
