--- a/src/etc/gforge-httpd.conf.example
+++ b/src/etc/gforge-httpd.conf.example
@@ -55,6 +55,8 @@
 
 	php_value	include_path ".:/opt/gforge/www/include/:/opt/gforge:/etc/gforge/"
 
+	Alias /scripts/jquery/ /opt/gforge/lib/vendor/jquery/
+	Alias /scripts/jquery-tipsy/ /opt/gforge/lib/vendor/jquery-tipsy/
 	Alias /scripts/prototype/ /opt/gforge/lib/vendor/prototype/
 	Alias /scripts/scriptaculous/ /opt/gforge/lib/vendor/scriptaculous/
 	Alias /scripts/yui/ /opt/gforge/lib/vendor/yui/build/
